--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.css"
+    />
   </head>
   <body>
     <div id="root"></div>
