--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="#" />
+    <link rel="icon" href="/public/favicon.ico" />
     <title>Checkout page</title>
     <link
       rel="stylesheet"
